# olistchris

./: AISDPChris.ipynb  JupyterLabDocker  PipelineDocker  README.md  models.html  models.ipynb  pyproject.toml  requirements.txt
.virtual_documents/: eda.ipynb
conf/base/: parameters_data_science.yml  parameters_reporting.yml
data/: olist_datadict.xlsx
saved_models/delivery_time_regressor.pickle/2025-06-04T16.13.59.110Z/: delivery_time_regressor.pickle
saved_models/delivery_time_regressor.pickle/2025-06-04T18.29.13.670Z/: delivery_time_regressor.pickle
saved_models/freight_value_regressor.pickle/2025-06-04T16.13.59.110Z/: freight_value_regressor.pickle
saved_models/freight_value_regressor.pickle/2025-06-04T20.06.08.566Z/: freight_value_regressor.pickle
saved_models/repeat_buyer_classifier.pickle/2025-06-04T12.59.19.342Z/: repeat_buyer_classifier.pickle
saved_models/repeat_buyer_classifier.pickle/2025-06-04T16.13.59.110Z/: repeat_buyer_classifier.pickle
saved_models/repeat_buyer_classifier.pickle/2025-06-04T20.09.23.616Z/: repeat_buyer_classifier.pickle
src/olistchris/: README.md  __init__.py  __main__.py  requirements.txt  run.sh
src/olistchris/conf/base/: catalog.yml  parameters_data_science.yml
src/olistchris/pipelines/reporting/: nodes.py  pipeline.py
src/olistchris/src/olistchris/: settings.py
src/olistchris/src/olistchris/pipelines/data_processing/: nodes.py  pipeline.py
src/olistchris/src/olistchris/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
src/olistchris/src/olistchris/pipelines/reporting/: nodes.py  pipeline.py
